changed class name